--- a/simple/qml.qrc
+++ b/simple/qml.qrc
@@ -1,9 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>MySingleton.qml</file>
-        <file>qmldir</file>
-        <file>MyComponentTwo.qml</file>
-        <file>MyComponentOne.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/MySingleton.qml</file>
+        <file>qml/qmldir</file>
+        <file>qml/MyComponentTwo.qml</file>
+        <file>qml/MyComponentOne.qml</file>
     </qresource>
 </RCC>
